--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "socket.io": "^2.3.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
